<resources>
    <string name="app_name">MakeParty</string>
    <string name="button_criar_conta">CRIAR CONTA</string>
    <string name="button_entrar">ENTRAR</string>
    <string name="img_logo">Logo MakeParty</string>
    <string name="label_login">LogIn</string>
    <string name="label_cadastro">Cadastro</string>
    <string name="label_home">Home</string>
    <string name="label_escolha">Escolha</string>
    <string name="label_definir_regiao">Definir região no mapa</string>
    <string name="text_click_esqueceu_senha">Esqueceu a senha?</string>
    <string name="edit_text_email">E-mail</string>
    <string name="edit_text_senha">Senha</string>
    <string name="edit_text_nome">Nome</string>
    <string name="text_view_cadastro">CADASTRO</string>
    <string name="text_view_nome">Nome:</string>
    <string name="text_view_email">E-mail:</string>
    <string name="text_view_senha">Senha:</string>
    <string name="edit_text_conf_senha">Confirmar senha</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_senha">Senha</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_cpf">CPF</string>
    <string name="prompt_data">Data de nascimento</string>
    <string name="prompt_confirmar_email">Confirmar email</string>
    <string name="prompt_confirmar_senha">Confirmar senha</string>
    <string name="edit_text_cnpj">CNPJ</string>
    <string name="edit_text_mei">MEI</string>
    <string name="img_ic_cliente">Icone cliente</string>
    <string name="img_ic_fornecedor">Icone owner</string>
    <string name="action_settings">Configurações</string>
    <string name="Search">Pesquisar</string>
    <string name="ic_pacotes">Pacotes</string>
    <string name="ic_casadefesta">Casa de festa</string>
    <string name="ic_buffet">Buffet</string>
    <string name="ic_decoracao">Decoração</string>
    <string name="ic_animacao">Animação</string>
    <string name="action_filtrar_por_preco">Filtrar por preco</string>
    <string name="action_filtrar_por_regiao">Filtrar por região</string>
    <string-array name="tipodeuser">
        <item>Cliente</item>
        <item>Fornecedor</item>
    </string-array>
    <string name="title_activity_inicio_nav">InicioNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="carrinho">Carrinho</string>
    <string name="prompt_telefone">Telefone</string>
    <string name="label_user_avaliar_fornecedor">Avaliar fornecedor</string>
    <string name="Confirmar">Confirmar</string>
    <string name="text_resultado_user_avaliacao_para_fornecedor">Resultado sua avaliação</string>
    <string name="text_avaliar_fornecedor">Avaliar fornecedor</string>
    <string name="img_fornecedor_avaliacao">Imagem do fornecedor</string>
    <string name="text_nome_fornecedor">Nome do fornecedor</string>
    <string name="text_view_escolha_usuario">Escolha o tipo de usuário:</string>
    <string name="text_view_title_anuncio">Titulo do ads</string>
    <string name="text_view_razao_social_fornecedor">Nome do fornecedor</string>
    <string name="text_view_preco_anuncio">R$0,00</string>
    <string name="text_view_modificar">Titulo "Modificar"</string>
    <string name="text_view_modificar_nome">Editar nome de fornecedor</string>
    <string name="text_view_modificar_email">Editar email de fornecedor</string>
    <string name="text_view_modificar_senha">Editar senha do fornencedor</string>
    <string name="text_view_modificar_cnpj">Editar imei/cnpj do fornencedor</string>
    <string name="text_view_modificar_mandarMensagem">Mande mensagem para o número xxx</string>
    <string name="text_view_modificar_apagarConta">Apague sua conta de fornencedor</string>
    <string name="text_view_modificar_sair">Sair da configuração do fornencedor</string>
    <string name="img_view_foto_anuncio">Foto do anúncio</string>
    <string name="ic_avaliar_anuncio_fornecedor">Avaliar fornecedor pelo anúncio</string>
    <string name="ic_adicionar_anuncio_a_lista_desejos">Adicionar anúncio a lista de desejos</string>
    <string name="text_fornecedor_media_geral">Média geral do tipo de anúncio do fornecedor</string>
    <string name="text_pacotes">Pacotes</string>
    <string name="text_casas_de_festas">Casas de festas</string>
    <string name="text_buffet">Buffet</string>
    <string name="text_decoracao">Decoração</string>
    <string name="text_animacao">Animação</string>
    <string name="msg_error_conexao_indisponivel">Conexão indisponível</string>
    <string name="msg_carro_sem_video">Carro sem vídeo cadastrado</string>
    <string name="msg_url_invalida">URL de vídeo inválida</string>
    <string name="msg_error_io">Ocorreu algum erro ao buscar os dados.</string>
    <string name="msg_erro_io_timeout">Erro de timeout na consulta.</string>
    <string name="msg_error_campo_obrigatorio">Campo obrigatório.</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>
    <string name="transition_key">img_transition_key</string>
    <string name="action_add_lista_desejo">Adicionar a lista de desejos</string>
    <string name="title_activity_notificacoes">NotificacoesActivity</string>
    <string name="text_view_verificar_disponibilidade_anuncio">Verificar disponibilidade</string>
    <string name="label_entrar_ou_cadastrar">Entrar ou cadastrar</string>
    <string name="label_app">Make Party</string>
    <string name="label_configuracoes">Configurações</string>
    <string name="img_view_notificacoes">Notificações</string>
    <string name="img_view_calendario">Calendário</string>
    <string name="img_view_fazer_anuncio">Fazer anúncio</string>
    <string name="img_view_config">Configurações</string>
    <string name="img_view_user_avatar">Avatar de usuário </string>
    <string name="label_calendario">Calendário</string>
    <string name="label_configuracao">Configuração</string>
    <string name="label_dia_selecionado_fornecedor">Dia selecionado do calendário</string>
    <string name="nome"><![CDATA[Nome >]]></string>
    <string name="modificar">Modificar</string>
    <string name="sair"><![CDATA[Sair >]]></string>
    <string name="apagar_conta"><![CDATA[Apagar conta >]]></string>
    <string name="mandar_mensagem"><![CDATA[Mandar mensagem >]]></string>
    <string name="imei_cnpj"><![CDATA[IMEI/CNPJ >]]></string>
    <string name="senha"><![CDATA[Senha >]]></string>
    <string name="e_mail"><![CDATA[E-mail >]]></string>
    <string name="text_view_mudar_plano">Mudar plano      ></string>
    <string name="ic_mudar_foto_perfil">Mudar foto do perfil</string>
    <string name="text_atualizar">Atualizar</string>
    <string name="tipo_Anuncio">Tipo do Anuncio</string>
    <string name="edit_text_telefone_criar_an">Telefone</string>
    <string name="edit_text_endereco">Endereço</string>
    <string name="text_view_endereco">Endereço</string>
    <string name="edit_text_rua_criar_anuncio">Rua</string>
    <string name="edit_text_numero_an">Número</string>
    <string name="button_criar_anuncio">Criar anúncio</string>
    <string name="edit_text_cep_anuncio">CEP</string>
    <string name="edit_text_cidade_criar_an">Cidade</string>
    <string name="edit_text_bairro_criar_an">Bairro</string>
    <string name="spinner_msg_esc_tipo_an">Escolha o tipo de Anúncio:</string>
    <string name="label_escolhas_sobre_anuncios">Escolhas sobre o anúncio</string>
    <string name="button_chat_fornecedor">CHAT</string>
    <string name="button_visualizar_an_forn">Meus anúncios</string>
    <string name="text_view_anexar_img_an">Anexar imagens</string>
    <string name="text_view_limites_criar_anuncio_forn">Você tem plano tal tal com limite de ft, vc ja postou x</string>
    <string name="text_view_criar_novo_anuncio">Criar novo anúncio</string>
    <string name="label_meus_anuncios_forn">Meus anúncios</string>
    <string name="label_lista_desej_cliente">Minha lista de desejo</string>
    <string name="label_lista_minhas_notif_forn">Minhas notificações</string>
    <string name="label_lista_dias_disp_cliente_clicou">Lista de disponibilidade do fornecedor</string>
    <string name="button_enviar_solic_reuniao">Enviar solicitação de reunião</string>
    <string name="text_view_editar_anuncio">Editar anúncio</string>
    <string name="button_editar_anuncio">Editar anúncio</string>
    <string name="button_atualizar_anuncio">Atualizar anúncio</string>
    <string name="button_excluir_anuncio">Excluir anúncio</string>
    <string name="text_button_avaliar_anuncio_detalhes_an">Avalie clicando aqui</string>
    <string name="text_view_detalhes_anuncio">Detalhes</string>
    <string name="text_view_perg_ja_conhece_servico">Ja conhece o serviço desse fornecedor?</string>
    <string name="text_view_data_pub_anuncio">Data de publicação:XX/XX/XXXX</string>
    <string name="text_view_deixe_coment">Quer deixar algum comentário? digite abaixo</string>
    <string name="edit_digite_seu_coment_add_avalie">Digite seu comentário</string>
    <string name="text_view_nome_cliente">Nome cliente</string>
    <string name="text_view_desc_coment">Descricao do comentario: Esse serviço prestado por Kimbelly é topasso, melhor pessoa! hshs</string>
    <string name="text_view_nota_coment_avaliacao">Nota: </string>
    <string name="text_view_data_avaliacao_cliente_coment">Data: xx/xx/xxxx</string>
    <string name="action_opcoes_coment">Opções referentes ao comentário</string>
    <string name="action_delete_item_lista">Delete item da lista</string>
    <string name="label_alterando_dados">Alterando dados</string>
    <string name="edit_text_email_alterando_perfil">Digite seu novo email aqui</string>
    <string name="edit_text_nome_alterando_perfil">Digite seu novo nome de usuário</string>
    <string name="edit_text_senha_atual_alterando_perfil">Digite aqui sua senha atual</string>
    <string name="edit_text_nova_senha_alterando_perfil">Digite aqui sua nova senha</string>
    <string name="label_filtro_preco">Filtro por preço</string>
    <string name="edit_text_preco_inicial_filtro_por_preco">Digite o preço aqui</string>
    <string name="text_view_evento_selec_titulo">Evento selecionado</string>
    <string name="text_view_nome_cliente_evento_selec">Nome do cliente : Kimbelly Ferraz</string>
    <string name="text_view_desc_evento_selecionado">Descrição/obs : Evento tem que ter muito bolo, muita coxinha, muita diversão
    telefone dela: (xx)xxxxxxxx</string>
    <string name="text_view_tipo_ev_ind_evento_selec">Evento  : FestaOuIndisp</string>
    <string name="text_view_end_evento_det_ev">Endereço : Rua prof General Fagundes Inventei Ol Mag, Olinda 2000, casa 6, Pernambuco,Brasil</string>
    <string name="button_excluir_evento">Excluir evento</string>
    <string name="text_view_data_inicio_evento_selec">Data de inicio: XX/XX/XXXX às XX:XX</string>
    <string name="text_view_data_fim_evento_selec">Data de fim: XX/XX/XXXX às XX:XX</string>
    <string name="label_dia_selecionado_forn_evento">Detalhes do evento</string>
    <string name="text_view_data_fim_termina_em_outro_dia_perg_evento_selec">Data fim termina em outro dia : TruFa </string>
    <string name="text_view_tipo_evento_forn">Tipo do evento : Aniversário</string>
    <string name="text_view_data_inicio_evento_lista_forn">Data de inicio: XX/XX/XXXX às XX:XX</string>
    <string name="text_view_data_fim_evento_lista_forn">Data fim : XX/XX/XXXX às XX:XX</string>
    <string name="text_view_situacao_evento_lista_forn">Situação : Já pago</string>
    <string name="button_editar_evento">Editar evento</string>
    <string name="text_view_entrar_sem_logar_cliente">NÃO, NÃO QUERO LOGAR NEM CADASTRAR ></string>
</resources>