<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fornecedor.gui.EscolhasSobreAnuncioActivity"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/materialup.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/materialup.toolbar"
            style="@style/ToolBarWithNavigationBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/label_escolhas_sobre_anuncios"
            app:titleTextColor="@color/colorFundo" />
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/buttonVisualizarMeusAnunciosForn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_visualizar_an_forn"
        android:layout_margin="50dp"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="259dp" />

    <Button
        android:id="@+id/buttonCriarAnuncioEs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_criar_anuncio"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonVisualizarMeusAnunciosForn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonChatFornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_chat_fornecedor"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:visibility="gone"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="335dp" />
</LinearLayout>