<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ViewFlipper
        android:id="@+id/slideLoginOuCadastroViewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewLogoEntrarOuCadastrar"
            android:layout_width="319dp"
            android:layout_height="158dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logovetor" />

        <Button
            android:id="@+id/button_entrar"
            android:layout_width="290dp"
            android:layout_height="51dp"
            android:layout_marginTop="42dp"
            android:background="@color/colorButoes"
            android:onClick="irParaTelaEntrar"
            android:text="@string/button_entrar"
            android:textColor="@color/colorTextoBut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogoEntrarOuCadastrar" />

        <Button
            android:id="@+id/button_criar_conta"
            android:layout_width="290dp"
            android:layout_height="51dp"
            android:layout_margin="16dp"
            android:layout_marginTop="28dp"
            android:background="@color/colorButoes"
            android:onClick="irParaTelaCriarConta"
            android:text="@string/button_criar_conta"
            android:textColor="@color/colorTextoBut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_entrar" />

        <TextView
            android:id="@+id/btnEntrarSemlogarCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/text_view_entrar_sem_logar_cliente"
            android:textColor="@color/colorTextoBut"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_criar_conta" />
    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>